# ansible-role-tripleo-gnocchi

./: .gitreview  README.md  ansible.cfg  setup.cfg
meta/: main.yml
