[metadata]
name = ansible-role-tripleo-gnocchi
summary = ansible-role-tripleo-gnocchi - Ansible gnocchi role for the TripleO project.
description-file =
    README.md
author = TripleO Team
author-email = jillr@redhat.com
home-page = https://opendev.org/openstack/ansible-role-tripleo-gnocchi
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/tripleo-gnocchi/defaults = defaults/*
    share/ansible/roles/tripleo-gnocchi/meta = meta/*
    share/ansible/roles/tripleo-gnocchi/tasks = tasks/*
    share/ansible/roles/tripleo-gnocchi/templates = templates/*
    share/ansible/roles/tripleo-gnocchi/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

